# multimodal-single-cell-integration

./: README.md  ceate_subset_data.py  create_subset_data.py  incremental_pca.py  partition_dataset.py  predict_gene_expression.py  pyproject.toml
data/pca/multiome_chromatin_accessibility/10/: .part-00000-df50c859-badb-4bbe-b886-449f507bede7-c000.snappy.parquet.crc  part-00000-df50c859-badb-4bbe-b886-449f507bede7-c000.snappy.parquet
data/pca/multiome_chromatin_accessibility/11/: part-00000-350ff41d-7afb-41a6-842f-5d2698389c2d-c000.snappy.parquet
data/pca/multiome_chromatin_accessibility/12/: part-00000-2c7483c7-ecc9-4670-bc63-3956a11d0705-c000.snappy.parquet
data/pca/multiome_chromatin_accessibility/13/: .part-00000-35b20386-a67f-4801-8e0d-6da666e88182-c000.snappy.parquet.crc
data/pca/multiome_chromatin_accessibility/14/: .part-00000-ece12d01-96cb-42e0-987d-7349987293e5-c000.snappy.parquet.crc
data/pca/multiome_chromatin_accessibility/15/: .part-00000-41105107-592c-4a20-a4d4-34738f6efa19-c000.snappy.parquet.crc
data/pca/multiome_chromatin_accessibility/17/: .part-00000-a0764b03-cca5-4ae5-ae47-2bdf2d15c5ff-c000.snappy.parquet.crc  part-00000-a0764b03-cca5-4ae5-ae47-2bdf2d15c5ff-c000.snappy.parquet
data/pca/multiome_chromatin_accessibility/2/: part-00000-ce892c50-ef7e-4070-b840-5c8c361e646f-c000.snappy.parquet
data/pca/multiome_chromatin_accessibility/20/: .part-00000-a1ec0d1d-d730-4901-8c44-d6f004cc10f4-c000.snappy.parquet.crc
unused_experimental_code/: create_subset_data.py  partition_dataset.py
(+223 files in other folders)
